--- a/TwitEvent/war/WEB-INF/web.xml
+++ b/TwitEvent/war/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 
   <!-- Servlets -->
   <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.site.twitevent.server.GreetingServiceImpl</servlet-class>
+    <servlet-name>TwitEventServiceImpl</servlet-name>
+    <servlet-class>com.site.twitevent.server.TwitEventServiceImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/twitevent/greet</url-pattern>
+    <servlet-name>TwitEventServiceImpl</servlet-name>
+    <url-pattern>/twitevent/twitEventService</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
